Fix translation building
+ fix empty translation.qrc
+ fix variables scope in cmake for translations

Signed-off-by: Alberto Scotta <albertoscotta93@gmail.com>

--- a/openhantek/translations/CMakeLists.txt
+++ b/openhantek/translations/CMakeLists.txt
@@ -9,13 +9,18 @@ if (NOT Qt5LinguistTools_FOUND)
     return()
 endif()
 
-qt5_create_translation(TRANSLATION_BIN_FILES "${CMAKE_CURRENT_LIST_DIR}")
+file(GLOB TS_FILES "*.ts")
+qt5_create_translation(TRANSLATION_BIN_FILES ${TS_FILES})
 
 # We prepare the translations.qrc file and insert all available compiled translation files now.
 set(QRC_ITEMS "")
 foreach(TRANSLATION_FILE ${TRANSLATION_BIN_FILES})
 	get_filename_component(FILENAME "${TRANSLATION_FILE}" NAME)
 	set(QRC_ITEMS "${QRC_ITEMS}\n<file alias=\"${FILENAME}\">${TRANSLATION_FILE}</file>")
-endforeach() 
-configure_file("${CMAKE_CURRENT_LIST_DIR}/translations.qrc" "${CMAKE_BINARY_DIR}/translations.qrc" @ONLY)
-QT5_ADD_RESOURCES(TRANSLATION_QRC "${CMAKE_BINARY_DIR}/translations.qrc")
+endforeach()
+
+set(TRANSLATION_QRC "${CMAKE_BINARY_DIR}/translations.qrc")
+set(TRANSLATION_QRC "${TRANSLATION_QRC}" PARENT_SCOPE)
+configure_file("${CMAKE_CURRENT_LIST_DIR}/translations.qrc" ${TRANSLATION_QRC} @ONLY)
+QT5_ADD_RESOURCES(TRANSLATION_CPP "${TRANSLATION_QRC}")
+add_custom_target(translations DEPENDS ${TRANSLATION_BIN_FILES})
